GitHub upload test00

--- a/Wk06_CV_24Feb22.ipynb
+++ b/Wk06_CV_24Feb22.ipynb
@@ -6,7 +6,7 @@
       "name": "Wk06-CV-24Feb22.ipynb",
       "provenance": [],
       "mount_file_id": "1R2_ExplKQCr4IXrTIBDan509B9UEwn_O",
-      "authorship_tag": "ABX9TyPP5IAMga17DGECjCaFiG2M",
+      "authorship_tag": "ABX9TyPcu+0BuaR+qLhHB/VqR4k7",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -31,6 +31,7 @@
     {
       "cell_type": "code",
       "source": [
+        "#WK06 git uplode test\n",
         "import cv2\n",
         "import numpy as np\n",
         "import matplotlib.pyplot as plt\n",
@@ -65,7 +66,7 @@
           "height": 304
         },
         "id": "jWSeDzS8wgmD",
-        "outputId": "65825a40-78bb-46a7-9530-f8afb9d3dcb8"
+        "outputId": "b653d998-97e2-43e3-8d28-40ed80d0ed24"
       },
       "execution_count": 1,
       "outputs": [
@@ -80,7 +81,7 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<matplotlib.image.AxesImage at 0x7fb7e1fdce50>"
+              "<matplotlib.image.AxesImage at 0x7ff0f0184fd0>"
             ]
           },
           "metadata": {},
@@ -106,10 +107,10 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 546
+          "height": 547
         },
         "id": "vehZy2zzuPtq",
-        "outputId": "53eb4aba-cabe-4e79-ffc3-6a7cd114872e"
+        "outputId": "0a244e64-7e03-4778-e241-f9e4c2931870"
       },
       "outputs": [
         {
@@ -137,7 +138,7 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<matplotlib.image.AxesImage at 0x7fb7e2015dd0>"
+              "<matplotlib.image.AxesImage at 0x7ff0efcb63d0>"
             ]
           },
           "metadata": {},
@@ -215,7 +216,7 @@
           "height": 304
         },
         "id": "hq2FB0TPz6Fj",
-        "outputId": "a8719dc7-05f7-4f6a-d240-4af096507e92"
+        "outputId": "538b290b-162c-40b0-d1cd-f64f42b94c28"
       },
       "execution_count": 3,
       "outputs": [
@@ -230,7 +231,7 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<matplotlib.image.AxesImage at 0x7fb7e1a8d4d0>"
+              "<matplotlib.image.AxesImage at 0x7ff0efc34150>"
             ]
           },
           "metadata": {},
