--- a/Wk06_CV_24Feb22.ipynb
+++ b/Wk06_CV_24Feb22.ipynb
@@ -6,7 +6,7 @@
       "name": "Wk06-CV-24Feb22.ipynb",
       "provenance": [],
       "mount_file_id": "1R2_ExplKQCr4IXrTIBDan509B9UEwn_O",
-      "authorship_tag": "ABX9TyPcu+0BuaR+qLhHB/VqR4k7",
+      "authorship_tag": "ABX9TyPP5IAMga17DGECjCaFiG2M",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -31,7 +31,6 @@
     {
       "cell_type": "code",
       "source": [
-        "#WK06 git uplode test\n",
         "import cv2\n",
         "import numpy as np\n",
         "import matplotlib.pyplot as plt\n",
@@ -66,9 +65,9 @@
           "height": 304
         },
         "id": "jWSeDzS8wgmD",
-        "outputId": "b653d998-97e2-43e3-8d28-40ed80d0ed24"
+        "outputId": "f3e58425-1c83-4f98-c695-5e0e01502c4d"
       },
-      "execution_count": 1,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -81,11 +80,11 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<matplotlib.image.AxesImage at 0x7ff0f0184fd0>"
+              "<matplotlib.image.AxesImage at 0x7ff0efbad090>"
             ]
           },
           "metadata": {},
-          "execution_count": 1
+          "execution_count": 4
         },
         {
           "output_type": "display_data",
@@ -103,14 +102,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 5,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 547
         },
         "id": "vehZy2zzuPtq",
-        "outputId": "0a244e64-7e03-4778-e241-f9e4c2931870"
+        "outputId": "0067554e-b707-4bb3-f7de-0dff36a75d67"
       },
       "outputs": [
         {
@@ -138,11 +137,11 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<matplotlib.image.AxesImage at 0x7ff0efcb63d0>"
+              "<matplotlib.image.AxesImage at 0x7ff0efb22690>"
             ]
           },
           "metadata": {},
-          "execution_count": 2
+          "execution_count": 5
         },
         {
           "output_type": "display_data",
@@ -216,9 +215,9 @@
           "height": 304
         },
         "id": "hq2FB0TPz6Fj",
-        "outputId": "538b290b-162c-40b0-d1cd-f64f42b94c28"
+        "outputId": "3bb036e4-8aa0-4d09-debf-ceb7e4413f4d"
       },
-      "execution_count": 3,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
@@ -231,11 +230,11 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<matplotlib.image.AxesImage at 0x7ff0efc34150>"
+              "<matplotlib.image.AxesImage at 0x7ff0f0109a90>"
             ]
           },
           "metadata": {},
-          "execution_count": 3
+          "execution_count": 6
         },
         {
           "output_type": "display_data",
@@ -259,7 +258,7 @@
       "metadata": {
         "id": "jrkLGhra2a1v"
       },
-      "execution_count": 3,
+      "execution_count": 6,
       "outputs": []
     }
   ]
