--- a/Wk07_CV_03Mar22.ipynb
+++ b/Wk07_CV_03Mar22.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "mount_file_id": "1GAmMbjzc23NHBpWG9KRxF_4Wr4HUL_HI",
-      "authorship_tag": "ABX9TyPhd9D3614DAHr0VGvHZ3sj",
+      "authorship_tag": "ABX9TyO6QAYzVDEGNq8zutdEAFHF",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -31,7 +31,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 94,
+      "execution_count": 137,
       "metadata": {
         "id": "4QXPedRrsFBf"
       },
@@ -60,19 +60,19 @@
           "base_uri": "https://localhost:8080/",
           "height": 258
         },
-        "outputId": "aca127ba-3562-41ed-d413-442127499bad"
+        "outputId": "d920fa8a-5e5e-427f-864d-bf645a1664d2"
       },
-      "execution_count": 95,
+      "execution_count": 138,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<matplotlib.image.AxesImage at 0x7f65e51635d0>"
+              "<matplotlib.image.AxesImage at 0x7f65e403d450>"
             ]
           },
           "metadata": {},
-          "execution_count": 95
+          "execution_count": 138
         },
         {
           "output_type": "display_data",
@@ -105,9 +105,9 @@
           "height": 276
         },
         "id": "9Xhou8IH5R2y",
-        "outputId": "064a6d99-b8cc-4bc8-8f98-392cc33badd1"
+        "outputId": "5e1db9a2-5542-4187-bf46-84d567b485af"
       },
-      "execution_count": 96,
+      "execution_count": 139,
       "outputs": [
         {
           "output_type": "stream",
@@ -120,11 +120,11 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<matplotlib.image.AxesImage at 0x7f65e506a150>"
+              "<matplotlib.image.AxesImage at 0x7f65e4072090>"
             ]
           },
           "metadata": {},
-          "execution_count": 96
+          "execution_count": 139
         },
         {
           "output_type": "display_data",
@@ -157,9 +157,9 @@
           "height": 276
         },
         "id": "j4nsZVYy5rLw",
-        "outputId": "888e0458-d754-45aa-b8bf-0875807e0745"
+        "outputId": "0166df4c-58d6-411f-83a7-5f7be04de0da"
       },
-      "execution_count": 97,
+      "execution_count": 140,
       "outputs": [
         {
           "output_type": "stream",
@@ -172,11 +172,11 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<matplotlib.image.AxesImage at 0x7f65e4fd4790>"
+              "<matplotlib.image.AxesImage at 0x7f65e3f82610>"
             ]
           },
           "metadata": {},
-          "execution_count": 97
+          "execution_count": 140
         },
         {
           "output_type": "display_data",
@@ -209,9 +209,9 @@
           "height": 276
         },
         "id": "lIB4KaRC6VBg",
-        "outputId": "1a079c93-664a-4167-9613-1edd2e766c3a"
+        "outputId": "94fe1e24-2dd9-4212-f657-181a32978e5e"
       },
-      "execution_count": 98,
+      "execution_count": 141,
       "outputs": [
         {
           "output_type": "stream",
@@ -224,11 +224,11 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<matplotlib.image.AxesImage at 0x7f65e5f4dfd0>"
+              "<matplotlib.image.AxesImage at 0x7f65e3f45310>"
             ]
           },
           "metadata": {},
-          "execution_count": 98
+          "execution_count": 141
         },
         {
           "output_type": "display_data",
@@ -261,9 +261,9 @@
           "height": 276
         },
         "id": "mqCZjPDv6ks4",
-        "outputId": "303e0878-2bd7-4974-86d5-f7d60478eab9"
+        "outputId": "df4430ec-847f-4f63-afaf-06f2aab3c30f"
       },
-      "execution_count": 99,
+      "execution_count": 142,
       "outputs": [
         {
           "output_type": "stream",
@@ -276,11 +276,11 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<matplotlib.image.AxesImage at 0x7f65e58c1fd0>"
+              "<matplotlib.image.AxesImage at 0x7f65e3eedfd0>"
             ]
           },
           "metadata": {},
-          "execution_count": 99
+          "execution_count": 142
         },
         {
           "output_type": "display_data",
@@ -312,19 +312,19 @@
           "height": 286
         },
         "id": "LVA0d2G-6wmy",
-        "outputId": "ef2fdbaa-235c-4f0d-fddc-414458998f14"
+        "outputId": "e83de983-8c16-4e23-8e7f-7a0e6e278857"
       },
-      "execution_count": 100,
+      "execution_count": 143,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<matplotlib.image.AxesImage at 0x7f65e593d790>"
+              "<matplotlib.image.AxesImage at 0x7f65e3e6c990>"
             ]
           },
           "metadata": {},
-          "execution_count": 100
+          "execution_count": 143
         },
         {
           "output_type": "display_data",
@@ -357,9 +357,9 @@
           "height": 304
         },
         "id": "c-ycZRBb8z47",
-        "outputId": "e09fb1ed-2b4c-4240-e7ea-642a5cccaadf"
+        "outputId": "d614c23b-b82d-446e-aff5-ce3ecb077ebc"
       },
-      "execution_count": 101,
+      "execution_count": 144,
       "outputs": [
         {
           "output_type": "stream",
@@ -372,11 +372,11 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<matplotlib.image.AxesImage at 0x7f65e4e72110>"
+              "<matplotlib.image.AxesImage at 0x7f65e3d4dbd0>"
             ]
           },
           "metadata": {},
-          "execution_count": 101
+          "execution_count": 144
         },
         {
           "output_type": "display_data",
@@ -419,9 +419,9 @@
           "height": 304
         },
         "id": "MUkiQBk8-0q1",
-        "outputId": "034e403c-32ad-4f2c-c371-6bb92b52383e"
+        "outputId": "75fc0ec7-a860-4602-8f55-147120d9fd07"
       },
-      "execution_count": 102,
+      "execution_count": 145,
       "outputs": [
         {
           "output_type": "stream",
@@ -434,11 +434,11 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<matplotlib.image.AxesImage at 0x7f65e5723ad0>"
+              "<matplotlib.image.AxesImage at 0x7f65e3ce2950>"
             ]
           },
           "metadata": {},
-          "execution_count": 102
+          "execution_count": 145
         },
         {
           "output_type": "display_data",
@@ -466,19 +466,19 @@
           "height": 260
         },
         "id": "tOdq9bkf_pa0",
-        "outputId": "677dc9eb-9d00-4d75-dcd7-c334fc22002e"
+        "outputId": "84a49c15-8d07-41f7-e219-a81399a549ad"
       },
-      "execution_count": 103,
+      "execution_count": 146,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<matplotlib.image.AxesImage at 0x7f65e4da7d10>"
+              "<matplotlib.image.AxesImage at 0x7f65e3cc7590>"
             ]
           },
           "metadata": {},
-          "execution_count": 103
+          "execution_count": 146
         },
         {
           "output_type": "display_data",
@@ -523,9 +523,9 @@
           "height": 304
         },
         "id": "opM6E1HB9DxL",
-        "outputId": "93847b2e-670e-4575-a3d1-a3a389afa799"
+        "outputId": "fd9c6390-f21c-4820-d810-0a1cc8fe9654"
       },
-      "execution_count": 104,
+      "execution_count": 147,
       "outputs": [
         {
           "output_type": "stream",
@@ -538,11 +538,11 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<matplotlib.image.AxesImage at 0x7f65e4d318d0>"
+              "<matplotlib.image.AxesImage at 0x7f65e3c29550>"
             ]
           },
           "metadata": {},
-          "execution_count": 104
+          "execution_count": 147
         },
         {
           "output_type": "display_data",
@@ -584,9 +584,9 @@
           "height": 304
         },
         "id": "wo0bbfWn9xix",
-        "outputId": "def85c2a-76c3-494b-873f-ac0afcc008a7"
+        "outputId": "68597740-995b-45ee-9541-7feea9f1aba4"
       },
-      "execution_count": 105,
+      "execution_count": 148,
       "outputs": [
         {
           "output_type": "stream",
@@ -599,11 +599,11 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<matplotlib.image.AxesImage at 0x7f65e4cc6ed0>"
+              "<matplotlib.image.AxesImage at 0x7f65e3bc0150>"
             ]
           },
           "metadata": {},
-          "execution_count": 105
+          "execution_count": 148
         },
         {
           "output_type": "display_data",
@@ -645,9 +645,9 @@
           "height": 304
         },
         "id": "meTKOE_WBS8T",
-        "outputId": "b768aa05-4565-4e13-a424-069c5a2f18df"
+        "outputId": "b942ec8a-07a6-4ec8-ca82-63df4696af56"
       },
-      "execution_count": 106,
+      "execution_count": 149,
       "outputs": [
         {
           "output_type": "stream",
@@ -660,11 +660,11 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<matplotlib.image.AxesImage at 0x7f65e4c9cd10>"
+              "<matplotlib.image.AxesImage at 0x7f65e3b0ac10>"
             ]
           },
           "metadata": {},
-          "execution_count": 106
+          "execution_count": 149
         },
         {
           "output_type": "display_data",
@@ -679,6 +679,61 @@
           }
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "img2 = rgb.copy()\n",
+        "contour, hierarchy= cv2.findContours(\n",
+        "                                      mor,\n",
+        "                                     cv2. RETR_EXTERNAL,\n",
+        "                                       cv2.CHAIN_APPROX_NONE)\n",
+        "print(len(contour))\n",
+        "for i in range (len(contour)):\n",
+        "  # draw circle\n",
+        "  cnt = contour[i]\n",
+        "  (x,y),rad = cv2. minEnclosingCircle(cnt)\n",
+        "  Cv2.circle(img2, (int (x),int(y)), int(rad), (0,0,255),-1)\n",
+        "  area = cv2.contourArea(cnt)\n",
+        "  if(area > 10):\n",
+        "    # ellipse\n",
+        "    ell = cv2.fitEllipse(cnt)\n",
+        "    cv2.ellipse(img2, ell, (255,0,0),5)\n",
+        "plt.imshow(img2)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 235
+        },
+        "id": "K-acIS4WC4Xj",
+        "outputId": "28a83e76-ba85-4994-e96e-6dba1d5e235e"
+      },
+      "execution_count": 150,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "NameError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-150-4014ff6cd457>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mimg2\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mrgb\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcopy\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m contour, hierarchy= cv2.findContours(\n\u001b[0;32m----> 3\u001b[0;31m                                       \u001b[0mmor\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m                                      \u001b[0mcv2\u001b[0m\u001b[0;34m.\u001b[0m \u001b[0mRETR_EXTERNAL\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m                                        cv2.CHAIN_APPROX_NONE)\n",
+            "\u001b[0;31mNameError\u001b[0m: name 'mor' is not defined"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "4_SocM2QER0j"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
