--- a/Wk09_CV_17Mar22.ipynb
+++ b/Wk09_CV_17Mar22.ipynb
@@ -6,7 +6,7 @@
       "name": "Wk09_CV_17Mar22.ipynb",
       "provenance": [],
       "mount_file_id": "1l6MS77Nf9HFYinhDMmpv5tZdiD77xd1u",
-      "authorship_tag": "ABX9TyMZpfLjJix8/tRjArjsHzoX",
+      "authorship_tag": "ABX9TyPmpHV6ImRQpUEYd9EnnzVt",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -30,7 +30,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 15,
       "metadata": {
         "id": "lz1RLYS53Ndr"
       },
@@ -61,19 +61,19 @@
           "height": 278
         },
         "id": "gw9c4WBV3h_U",
-        "outputId": "1bca2ad7-b526-4eeb-b68e-35bdb5847711"
+        "outputId": "d246d9db-6303-461a-837a-b1147a60870c"
       },
-      "execution_count": 10,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<matplotlib.image.AxesImage at 0x7f254e037850>"
+              "<matplotlib.image.AxesImage at 0x7f254e0ace50>"
             ]
           },
           "metadata": {},
-          "execution_count": 10
+          "execution_count": 16
         },
         {
           "output_type": "display_data",
@@ -100,19 +100,19 @@
           "height": 278
         },
         "id": "9rSzGgbMAiVE",
-        "outputId": "0e8b0d32-dea2-4d34-d755-6cc818b7b918"
+        "outputId": "ed9e39a6-c1ca-45e9-8157-b8dfbceff49a"
       },
-      "execution_count": 11,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<matplotlib.image.AxesImage at 0x7f254dfad050>"
+              "<matplotlib.image.AxesImage at 0x7f254de46190>"
             ]
           },
           "metadata": {},
-          "execution_count": 11
+          "execution_count": 17
         },
         {
           "output_type": "display_data",
@@ -131,8 +131,7 @@
     {
       "cell_type": "code",
       "source": [
-        "'''\n",
-        "template = cv2.imread(url2)\n",
+        "'''template = cv2.imread(url2)\n",
         "\n",
         "w = template.shape[1]\n",
         "h = template.shape[0]\n",
@@ -143,30 +142,36 @@
         "min_val, max_val, min_loc, max_loc = cv2.minMaxLoc(res)\n",
         "\n",
         "top_left = min_loc\n",
-        "bottom_righ'''"
+        "bottom_righ = (top_left[0] + w, top_left[1] + h)\n",
+        "cv2.rectangle(img, top_left, bottom_righ, 255, 2)\n",
+        "\n",
+        "# cv2.imshow(\"Gray\", res)\n",
+        "cv2.imshow(\"cv2.TM_SQDIFF\",img)\n",
+        "cv2.waitKey()\n",
+        "cv2.destroyAllWindows()'''"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 53
+          "height": 70
         },
         "id": "bGPHttUB9ks_",
-        "outputId": "5bbd33b1-ff56-4f6f-8904-74ac6c7e6520"
+        "outputId": "6d917f6a-5e64-44a1-cb3b-1e9f65a81117"
       },
-      "execution_count": 12,
+      "execution_count": 18,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "'\\ntemplate = cv2.imread(url2)\\n\\nw = template.shape[1]\\nh = template.shape[0]\\n\\nmethod = cv2.TM_SQDIFF\\n\\nres = cv2.matchTemplate(img,template,method)\\nmin_val, max_val, min_loc, max_loc = cv2.minMaxLoc(res)\\n\\ntop_left = min_loc\\nbottom_righ'"
+              "'template = cv2.imread(url2)\\n\\nw = template.shape[1]\\nh = template.shape[0]\\n\\nmethod = cv2.TM_SQDIFF\\n\\nres = cv2.matchTemplate(img,template,method)\\nmin_val, max_val, min_loc, max_loc = cv2.minMaxLoc(res)\\n\\ntop_left = min_loc\\nbottom_righ = (top_left[0] + w, top_left[1] + h)\\ncv2.rectangle(img, top_left, bottom_righ, 255, 2)\\n\\n# cv2.imshow(\"Gray\", res)\\ncv2.imshow(\"cv2.TM_SQDIFF\",img)\\ncv2.waitKey()\\ncv2.destroyAllWindows()'"
             ],
             "application/vnd.google.colaboratory.intrinsic+json": {
               "type": "string"
             }
           },
           "metadata": {},
-          "execution_count": 12
+          "execution_count": 18
         }
       ]
     },
@@ -186,9 +191,9 @@
           "height": 303
         },
         "id": "3DaLz5NS_a9T",
-        "outputId": "d3dd9b34-f47b-43af-de43-7d0ab760dd61"
+        "outputId": "7b213667-0c86-4905-947b-9c0aae2ac772"
       },
-      "execution_count": 13,
+      "execution_count": 19,
       "outputs": [
         {
           "output_type": "stream",
@@ -201,11 +206,11 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<matplotlib.image.AxesImage at 0x7f254df9d650>"
+              "<matplotlib.image.AxesImage at 0x7f254ddafa50>"
             ]
           },
           "metadata": {},
-          "execution_count": 13
+          "execution_count": 19
         },
         {
           "output_type": "display_data",
@@ -240,9 +245,9 @@
           "height": 296
         },
         "id": "doe0s2hfBAqP",
-        "outputId": "7db3056a-6b71-4da8-a147-bb6eebaee301"
+        "outputId": "eade048e-2e7d-4576-9262-c63a9b375c02"
       },
-      "execution_count": 14,
+      "execution_count": 20,
       "outputs": [
         {
           "output_type": "stream",
@@ -255,11 +260,11 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<matplotlib.image.AxesImage at 0x7f254df09450>"
+              "<matplotlib.image.AxesImage at 0x7f254dd9d7d0>"
             ]
           },
           "metadata": {},
-          "execution_count": 14
+          "execution_count": 20
         },
         {
           "output_type": "display_data",
@@ -283,7 +288,7 @@
       "metadata": {
         "id": "d5WRGxDwBNxU"
       },
-      "execution_count": null,
+      "execution_count": 20,
       "outputs": []
     }
   ]
