import matplotlib - plt

--- a/Wk10_CV_23Mar22.ipynb
+++ b/Wk10_CV_23Mar22.ipynb
@@ -6,7 +6,7 @@
       "name": "Wk10-CV-23Mar22.ipynb",
       "provenance": [],
       "mount_file_id": "1nw09nKP1eDXHR0bkDV73dQrH6yMUSPXY",
-      "authorship_tag": "ABX9TyPFRyLje/QTLCjnPjGLt1yB",
+      "authorship_tag": "ABX9TyO6QUwJ19HnUrUCOB817CSw",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -30,7 +30,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": 27,
       "metadata": {
         "id": "TTKgJWrDch2f"
       },
@@ -44,6 +44,7 @@
         "from base64 import b64decode, b64encode\n",
         "import cv2\n",
         "import numpy as np\n",
+        "import matplotlib.pyplot as plt\n",
         "import PIL\n",
         "import io\n",
         "import html\n",
